55555: SystemML Engine Enhancements - Fixes static code analysis issues (categories critical and major) V