@@ -1,7 +1,7 @@
 /**
  * IBM Confidential
  * OCO Source Materials
- * (C) Copyright IBM Corp. 2010, 2014
+ * (C) Copyright IBM Corp. 2010, 2015
  * The source code for this program is not published or otherwise divested of its trade secrets, irrespective of what has been deposited with the U.S. Copyright Office.
  */
 
@@ -18,7 +18,7 @@ import com.ibm.bi.dml.test.integration.TestConfiguration;
 public class ScalarAssignmentTest extends AutomatedTestBase
 {
 	@SuppressWarnings("unused")
-	private static final String _COPYRIGHT = "Licensed Materials - Property of IBM\n(C) Copyright IBM Corp. 2010, 2014\n" +
+	private static final String _COPYRIGHT = "Licensed Materials - Property of IBM\n(C) Copyright IBM Corp. 2010, 2015\n" +
                                              "US Government Users Restricted Rights - Use, duplication  disclosure restricted by GSA ADP Schedule Contract with IBM Corp.";
 	
 	private final static String TEST_NAME1 = "ForScalarAssignmentTest";
@@ -159,10 +159,10 @@ public class ScalarAssignmentTest extends AutomatedTestBase
 		Object value = null;
 		switch( vt )
 		{
-			case INT: value = new Integer(7); break;
-			case DOUBLE: value = new Double(7.7); break;
+			case INT: value = Integer.valueOf(7); break;
+			case DOUBLE: value = Double.valueOf(7.7); break;
 			case STRING: value = "This is a test!"; break;
-			case BOOLEAN: value = new Boolean(true); break;
+			case BOOLEAN: value = Boolean.valueOf(true); break;
 		}
 		
 	    TestConfiguration config = getTestConfiguration(TEST_NAME);
