@@ -1,7 +1,7 @@
 /**
  * IBM Confidential
  * OCO Source Materials
- * (C) Copyright IBM Corp. 2010, 2013
+ * (C) Copyright IBM Corp. 2010, 2015
  * The source code for this program is not published or otherwise divested of its trade secrets, irrespective of what has been deposited with the U.S. Copyright Office.
  */
 
@@ -20,7 +20,7 @@ import com.ibm.bi.dml.test.integration.TestConfiguration;
 public class ForLoopPredicateTest extends AutomatedTestBase 
 {
 	@SuppressWarnings("unused")
-	private static final String _COPYRIGHT = "Licensed Materials - Property of IBM\n(C) Copyright IBM Corp. 2010, 2013\n" +
+	private static final String _COPYRIGHT = "Licensed Materials - Property of IBM\n(C) Copyright IBM Corp. 2010, 2015\n" +
                                              "US Government Users Restricted Rights - Use, duplication  disclosure restricted by GSA ADP Schedule Contract with IBM Corp.";
 	
 	private final static String TEST_NAME1 = "for_pred1a"; //const
@@ -143,9 +143,9 @@ public class ForLoopPredicateTest extends AutomatedTestBase
 		Object valIncrement = null;
 		if( intScalar )
 		{
-			valFrom = new Integer((int)Math.round(from));
-			valTo = new Integer((int)Math.round(to));
-			valIncrement = new Integer(increment);
+			valFrom = Integer.valueOf((int)Math.round(from));
+			valTo = Integer.valueOf((int)Math.round(to));
+			valIncrement = Integer.valueOf(increment);
 		}
 		else
 		{
